--- a/css/app.css
+++ b/css/app.css
@@ -24,16 +24,24 @@ body {
   width: 100px;
   font-size: 32px;
   font-weight: lighter;
-  line-height: 64px;
+  line-height: 50px;
 }
 .grid-box {
-  width: 64px; height: 64px; border: 2px solid black; background: #889;
+  width: 50px; height: 50px; border: 2px solid black; background: #889;
   float: left; margin-right: 10px;
   border-radius: 5px;
   box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 }
 .grid-box.current {
   background: #ccd;
+}
+
+.grid-box.set {
+  background: #ecc;
+}
+
+.grid-box.set.current {
+  background: #fdd;
 }
 
 
@@ -45,6 +53,12 @@ body {
   background: #556;
   box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 
+}
+#play {
+  color: red;
+}
+#play.playing {
+  color: green;
 }
 
 button {
